--- a/css/main.css
+++ b/css/main.css
@@ -89,6 +89,69 @@ h1{
 }
 
 
+#portrett { 
+    height: 35vh;
+    
+    -webkit-clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+    clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+    
+/*-webkit-clip-path: ellipse(46% 47% at 50% 50%);
+clip-path: ellipse(46% 47% at 50% 50%);
+*/
+
+}
+
+#portrett { 
+  animation: clip 10s infinite
+}
+
+
+
+
+@keyframes clip {
+  0% {
+-webkit-clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+
+
+  }
+    
+  50% {
+-webkit-clip-path: polygon(9% 75%, 21% 92%, 43% 94%, 68% 94%, 85% 87%, 92% 65%, 91% 39%, 86% 13%, 68% 6%, 46% 4%, 22% 14%, 10% 33%, 6% 56%);
+clip-path: polygon(9% 75%, 21% 92%, 43% 94%, 68% 94%, 85% 87%, 92% 65%, 91% 39%, 86% 13%, 68% 6%, 46% 4%, 22% 14%, 10% 33%, 6% 56%);
+    
+}
+   100% {
+-webkit-clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+clip-path: polygon(9% 73%, 18% 88%, 37% 92%, 64% 90%, 83% 83%, 93% 67%, 95% 42%, 93% 19%, 76% 8%, 51% 4%, 26% 7%, 12% 23%, 7% 47%);
+
+
+  }
+}
+
+/*
+@keyframes clip {
+  0% {
+-webkit-clip-path: ellipse(46% 47% at 50% 50%);
+clip-path: ellipse(46% 47% at 50% 50%);
+
+
+  }
+    
+  50% {
+-webkit-clip-path: ellipse(50% 35% at 50% 50%);
+clip-path: ellipse(50% 35% at 50% 50%);
+    
+}
+   100% {
+-webkit-clip-path: ellipse(46% 47% at 50% 50%);
+clip-path: ellipse(46% 47% at 50% 50%);
+
+
+  }
+}
+*/
+
 
 #intro {
     height: 100vh;
@@ -99,8 +162,8 @@ h1{
 }
 
 .pilned{
-       width:100%;
-       height: auto;
+                    width:100%;
+                    height: auto;
                 }
 
 .pil{
